--- a/frontend/src/pages/Landing/Landing.module.css
+++ b/frontend/src/pages/Landing/Landing.module.css
@@ -1,10 +1,14 @@
+body {
+    overflow-y: hidden;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
-    gap: 2rem;
+    gap: 2.5rem;
 }
 
 .header {
