--- a/frontend/src/root/rootStyles.css
+++ b/frontend/src/root/rootStyles.css
@@ -31,6 +31,7 @@ body {
     font-family: var(--text-font);
     background-color: var(--white);
     color: var(--black);
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
